Log in
Skip to main content
Skip to sidebar
Dashboards
Projects
Issues
eazyBI
Give feedback to Atlassian
Help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Acknowledged notifications
Core Server
SERVER-91687
Fix LOG_V2DEBUG() numbers from SERVER-90790
Undo Transition
Closed
Export
null
XML
Word
Printable
JSON
Details
Type:
Bug
Resolution:
Fixed
Priority:
Major - P3
Fix Version/s:
8.1.0-rc0
,
7.3.4
,
8.0.0-rc9
Affects Version/s:
None
Component/s:
None
Labels:
None
Field Tab
Aha! Info
Assigned Teams:
Service Arch
Backwards Compatibility:
Fully Compatible
Operating System:
ALL
Backport Requested:
v8.0
,
v7.3
Sprint:
Programmability 2024-06-24
CAR Domain/s:
None
Aha! Reference:
None
Tracking Level:
None
Risk Status:
None
Exec Notes:
None
Goal Name(s):
None
Goal Link:
None
Description
Two issues:
Number was based on a BF, not a SERVER ticket.
Only one appended digit instead of two.
Attachments
Activity
People
Assignee:
Ronald Steinke (Inactive)
Reporter:
Ronald Steinke (Inactive)
Participants:
Githook User
,
Ronald Steinke
Votes
:
0
Vote for this issue
Watchers:
1
Start watching this issue
Dates
Created:
Jun 19 2024 04:04:21 PM UTC
Updated:
Jun 21 2024 03:09:53 AM UTC
Resolved:
Jun 19 2024 08:21:28 PM UTC
PagerDuty