SERVER-91687: Fix AsioSessionConstructor debug logging numbers (#23694)

GitOrigin-RevId: 0aa44fd05ad0ac505a6562a00dfbe2e609ad57cd